Fixed styling of apply buttons on small screens

--- a/css/screen.css
+++ b/css/screen.css
@@ -62,6 +62,7 @@ section.cta {
         margin-right: 20px;
         padding: 15px 30px !important;
         font-size: 30px !important;
+        margin-bottom: 20px;
     }
 
 .box {
